Stop telecom_text from collapsing

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -35,7 +35,7 @@ body {
 }
 
 
-#summary, #telecoms {
+#summary {
   .wikipedia {
     font-size  : 0.8em;
     font-style : oblique;
